--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 blinker==1.9.0
 click==8.1.7
+coverage==7.6.8
 dnspython==2.7.0
 email_validator==2.2.0
 exceptiongroup==1.2.2
@@ -14,6 +15,7 @@ MarkupSafe==3.0.2
 packaging==24.2
 pluggy==1.5.0
 pytest==8.3.4
+pytest-flask==1.3.0
 SQLAlchemy==2.0.36
 tomli==2.2.1
 typing_extensions==4.12.2
